# Flashlight_ModelAggregation

./: CMakeLists.txt  README.md  handler_tff.ipynb  notes.txt
.devcontainer/: devcontainer.json
src/: agent.hpp  aux.h  main.cpp
